--- a/about.html
+++ b/about.html
@@ -3,67 +3,103 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name | Portfolio</title>
+  <title>About Me</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="css.css" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-  <!-- Navigation Sidebar -->
   <nav>
-    <h2 class="logo text-center py-3">YN</h2>
+    <h2 class="logo text-center py-3"><img src="" alt="">Sebastian Broberg</h2>
     <ul id="navList">
-      <li class="navItem home-item"><a class="nav-link active" href="index.html">Home</a></li>
-      <li class="navItem"><a class="nav-link" href="#">About</a></li>
-      <li class="navItem"><a class="nav-link" href="#">Projects</a></li>
-      <li class="navItem"><a class="nav-link" href="#">Contact</a></li>
+      <li class="navItem"><a class="nav-link" href="index.html">Home</a></li>
+      <li class="navItem"><a class="nav-link active" href="about.html">About Me</a></li>
+      <li class="navItem"><a class="nav-link" href="projects.html">Projects</a></li>
+      <li class="navItem"><a class="nav-link" href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
-  <!-- Hamburger Menu -->
   <button class="menu-button" aria-label="Menu">&#9776;</button>
 
-  <!-- Main Content -->
   <main>
-    <section class="intro text-center">
-      <h1 class="display-6 fw-bold text-light">Hi, I'm <span class="accent">Sebastian</span></h1>
-      <p class="lead text-light mb-5">A Web Developer & Designer creating clean, modern digital experiences.</p>
+    <section class="intro text-center mb-5">
+      <h1 class="display-6 fw-bold text-light">About Me</h1>
+      <p class="lead text-light">Learn more about my background, skills, and the tools I use to bring ideas to life.</p>
     </section>
 
-    <section class="cards-section container">
+    <section class="personal-info container mb-5">
+      <div class="row justify-content-center align-items-center">
+        <div class="col-md-4 text-center">
+          <img src="images/me.jpg" alt="Profile photo" class="profile-img mb-3">
+        </div>
+        <div class="col-md-6">
+          <div class="card shadow-sm info-card">
+            <div class="card-body">
+              <h4 class="card-title accent mb-3"><img src="" alt="">Sebastian Broberg</h4>
+              <p class="text-light mb-2"><strong>Web Developer</strong></p>
+              <p class="text-light">Location: Gävle, Sweden</p>
+              <p class="mt-3 text-light">I’m a dedicated developer who loves crafting smooth, interactive, and scalable digital experiences. I specialize in front-end design and back-end integration using modern web technologies.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="skills container mb-5">
+      <h3 class="text-center mb-4 accent">Programming Languages & Tools</h3>
       <div class="row g-4 justify-content-center">
-        <div class="col-sm-10 col-md-5">
-          <div class="card shadow-sm">
+        <div class="col-4 col-sm-3 col-md-2 text-center skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML" class="skill-icon">
+          <p>HTML</p>
+        </div>
+        <div class="col-4 col-sm-3 col-md-2 text-center skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS" class="skill-icon">
+          <p>CSS</p>
+        </div>
+        <div class="col-4 col-sm-3 col-md-2 text-center skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" class="skill-icon">
+          <p>JavaScript</p>
+        </div>
+        <div class="col-4 col-sm-3 col-md-2 text-center skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP" class="skill-icon">
+          <p>PHP</p>
+        </div>
+        <div class="col-4 col-sm-3 col-md-2 text-center skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg" alt="CSHARP" class="skill-icon">
+          <p>C#</p>
+        </div>
+        <div class="col-4 col-sm-3 col-md-2 text-center skill-item">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/laravel/laravel-original.svg" alt="Laravel" class="skill-icon">
+          <p>Laravel</p>
+        </div>
+        
+      </div>
+    </section>
+
+    <section class="education container mb-5">
+      <h3 class="text-center mb-4 accent">Education</h3>
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          <div class="card shadow-sm mb-3 edu-card">
             <div class="card-body">
-              <h5 class="card-title fw-bold">Project 1</h5>
-              <p class="card-text">Description of your project or service. Highlight skills or technologies used.</p>
+              <h5 class="fw-bold text-light">Fourth Year Technical Education</h5>
+              <p class="mb-0 text-light">NTI Vetenskapsgymmnasiet Gävle</p>
+              <p class="text-muted">2025 – Current</p>
             </div>
           </div>
-        </div>
 
-        <div class="col-sm-10 col-md-5">
-          <div class="card shadow-sm">
+          <div class="card shadow-sm mb-3 edu-card">
             <div class="card-body">
-              <h5 class="card-title fw-bold">Project 2</h5>
-              <p class="card-text">Another sample of your work. You can add images or links here too.</p>
+              <h5 class="fw-bold text-light">Information and Media Technology</h5>
+              <p class="mb-0 text-light">NTI Vetenskapsgymmnasiet Gävle</p>
+              <p class="text-muted">2022 - 2025</p>
             </div>
           </div>
-        </div>
 
-        <div class="col-sm-10 col-md-5">
-          <div class="card shadow-sm">
+          <div class="card shadow-sm mb-3 edu-card">
             <div class="card-body">
-              <h5 class="card-title fw-bold">About Me</h5>
-              <p class="card-text">Short professional bio. Talk about your background, passion, and focus areas.</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-10 col-md-5">
-          <div class="card shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title fw-bold">Contact</h5>
-              <p class="card-text">Invite collaboration or job opportunities. Add a contact form or email link.</p>
+              <h5 class="fw-bold text-light">Basic Education</h5>
+              <p class="mb-0 text-light">Stigslund Skola</p>
+              <p class="text-muted">2012 - 2022</p>
             </div>
           </div>
         </div>
@@ -71,7 +107,6 @@
     </section>
   </main>
 
-  <!-- Mobile Navigation Script -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       const menuButton = document.querySelector('.menu-button');
