--- a/contact.html
+++ b/contact.html
@@ -3,67 +3,63 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name | Portfolio</title>
+  <title>Contact | Your Name</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="css.css" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-  <!-- Navigation Sidebar -->
   <nav>
-    <h2 class="logo text-center py-3">YN</h2>
+    <h2 class="logo text-center py-3">Sebastian Broberg</h2>
     <ul id="navList">
-      <li class="navItem home-item"><a class="nav-link active" href="index.html">Home</a></li>
-      <li class="navItem"><a class="nav-link" href="#">About</a></li>
-      <li class="navItem"><a class="nav-link" href="#">Projects</a></li>
-      <li class="navItem"><a class="nav-link" href="#">Contact</a></li>
+      <li class="navItem"><a class="nav-link" href="index.html">Home</a></li>
+      <li class="navItem"><a class="nav-link" href="about.html">About</a></li>
+      <li class="navItem"><a class="nav-link" href="projects.html">Projects</a></li>
+      <li class="navItem"><a class="nav-link active" href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
-  <!-- Hamburger Menu -->
   <button class="menu-button" aria-label="Menu">&#9776;</button>
 
-  <!-- Main Content -->
   <main>
-    <section class="intro text-center">
-      <h1 class="display-6 fw-bold text-light">Hi, I'm <span class="accent">Sebastian</span></h1>
-      <p class="lead text-light mb-5">A Web Developer & Designer creating clean, modern digital experiences.</p>
+    <section class="intro text-center mb-5">
+      <h1 class="display-6 fw-bold text-light">Get in Touch</h1>
+      <p class="lead text-light">Have a project in mind or just want to say hello? Let’s connect.</p>
     </section>
 
-    <section class="cards-section container">
-      <div class="row g-4 justify-content-center">
-        <div class="col-sm-10 col-md-5">
-          <div class="card shadow-sm">
+    <section class="contact-section container mb-5">
+      <div class="row justify-content-center g-5 align-items-start">
+   
+        <div class="col-md-6">
+          <div class="card shadow-sm contact-card">
             <div class="card-body">
-              <h5 class="card-title fw-bold">Project 1</h5>
-              <p class="card-text">Description of your project or service. Highlight skills or technologies used.</p>
+              <h4 class="accent mb-4">Send Me a Message</h4>
+              <form id="contactForm" action="#" method="POST">
+                <div class="mb-3">
+                  <label for="email" class="form-label text-light">Your Email</label>
+                  <input type="email" id="email" name="email" class="form-control form-dark" placeholder="you@example.com" required>
+                </div>
+                <div class="mb-3">
+                  <label for="message" class="form-label text-light">Your Message</label>
+                  <textarea id="message" name="message" class="form-control form-dark" rows="5" placeholder="Write your message here..." required></textarea>
+                </div>
+                <button type="submit" class="btn btn-accent mt-2 w-100">Send Message</button>
+              </form>
             </div>
           </div>
         </div>
 
-        <div class="col-sm-10 col-md-5">
-          <div class="card shadow-sm">
+        <div class="col-md-5">
+          <div class="card shadow-sm info-card">
             <div class="card-body">
-              <h5 class="card-title fw-bold">Project 2</h5>
-              <p class="card-text">Another sample of your work. You can add images or links here too.</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-10 col-md-5">
-          <div class="card shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title fw-bold">About Me</h5>
-              <p class="card-text">Short professional bio. Talk about your background, passion, and focus areas.</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-10 col-md-5">
-          <div class="card shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title fw-bold">Contact</h5>
-              <p class="card-text">Invite collaboration or job opportunities. Add a contact form or email link.</p>
+              <h4 class="accent mb-4">Contact Information</h4>
+              <p class="text-light mb-2"><strong>Email:</strong> sebbebroberg1717@gmail.com</p>
+              <p class="text-light mb-2"><strong>Phone:</strong> 0761717022</p>
+              <p class="text-light mb-2"><strong>Location:</strong> Gävle, Sweden</p>
+              <hr class="text-secondary">
+              <p class="text-light mb-0">
+                 <strong>Links:</strong> 
+                <a href="https://github.com/SebbeBengtson" class="accent-link">GitHub</a> 
+              </p>
             </div>
           </div>
         </div>
@@ -71,7 +67,6 @@
     </section>
   </main>
 
-  <!-- Mobile Navigation Script -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       const menuButton = document.querySelector('.menu-button');
@@ -87,6 +82,13 @@
           menuButton.classList.remove('open');
         }
         navOpen = !navOpen;
+      });
+
+      // (Optional) Handle form submission
+      document.querySelector('#contactForm').addEventListener('submit', function (e) {
+        e.preventDefault();
+        alert('Thank you! Your message has been sent.');
+        this.reset();
       });
     });
   </script>
