--- a/index.html
+++ b/index.html
@@ -9,21 +9,18 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-  <!-- Navigation Sidebar -->
   <nav>
-    <h2 class="logo text-center py-3">YN</h2>
+    <h2 class="logo text-center py-3">Sebastian Broberg</h2>
     <ul id="navList">
       <li class="navItem home-item"><a class="nav-link active" href="index.html">Home</a></li>
-      <li class="navItem"><a class="nav-link" href="#">About</a></li>
-      <li class="navItem"><a class="nav-link" href="#">Projects</a></li>
-      <li class="navItem"><a class="nav-link" href="#">Contact</a></li>
+      <li class="navItem"><a class="nav-link" href="about.html">About Me</a></li>
+      <li class="navItem"><a class="nav-link" href="projects.html">Projects</a></li>
+      <li class="navItem"><a class="nav-link" href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
-  <!-- Hamburger Menu -->
   <button class="menu-button" aria-label="Menu">&#9776;</button>
 
-  <!-- Main Content -->
   <main>
     <section class="intro text-center">
       <h1 class="display-6 fw-bold text-light">Hi, I'm <span class="accent">Sebastian</span></h1>
@@ -32,23 +29,6 @@
 
     <section class="cards-section container">
       <div class="row g-4 justify-content-center">
-        <div class="col-sm-10 col-md-5">
-          <div class="card shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title fw-bold">Project 1</h5>
-              <p class="card-text">Description of your project or service. Highlight skills or technologies used.</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-10 col-md-5">
-          <div class="card shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title fw-bold">Project 2</h5>
-              <p class="card-text">Another sample of your work. You can add images or links here too.</p>
-            </div>
-          </div>
-        </div>
 
         <div class="col-sm-10 col-md-5">
           <div class="card shadow-sm">
@@ -67,11 +47,31 @@
             </div>
           </div>
         </div>
+
+        <div class="col-sm-10 col-md-5">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title fw-bold">Project 1</h5>
+              <p class="card-text">Description of your project or service. Highlight skills or technologies used.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-10 col-md-5">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title fw-bold">Project 2</h5>
+              <p class="card-text">Another sample of your work. You can add images or links here too.</p>
+            </div>
+          </div>
+        </div>
+
+       
+
       </div>
     </section>
   </main>
 
-  <!-- Mobile Navigation Script -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       const menuButton = document.querySelector('.menu-button');
