Footer, index contact. Text, about

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
   <main>
     <section class="intro text-center mb-5">
-      <h1 class="display-6 fw-bold text-light">About Me</h1>
+      <h1 class="display-6 fw-bold text-light"><span class="accent">About Me</span></h1>
       <p class="lead text-light">Learn more about my background, skills, and the tools I use to bring ideas to life.</p>
     </section>
 
@@ -37,7 +37,7 @@
               <h4 class="card-title accent mb-3"><img src="" alt="">Sebastian Broberg</h4>
               <p class="text-light mb-2"><strong>Web Developer</strong></p>
               <p class="text-light">Location: Gävle, Sweden</p>
-              <p class="mt-3 text-light">I’m a dedicated developer who loves crafting smooth, interactive, and scalable digital experiences. I specialize in front-end design and back-end integration using modern web technologies.</p>
+              <p class="mt-3 text-light"></p>
             </div>
           </div>
         </div>
@@ -81,7 +81,7 @@
         <div class="col-md-8">
           <div class="card shadow-sm mb-3 edu-card">
             <div class="card-body">
-              <h5 class="fw-bold text-light">Fourth Year Technical Education</h5>
+              <h5 class="fw-bold text-light text-decoration-underline">Fourth Year Technical Education</h5>
               <p class="mb-0 text-light">NTI Vetenskapsgymmnasiet Gävle</p>
               <p class="text-muted">2025 – Current</p>
             </div>
@@ -89,7 +89,7 @@
 
           <div class="card shadow-sm mb-3 edu-card">
             <div class="card-body">
-              <h5 class="fw-bold text-light">Information and Media Technology</h5>
+              <h5 class="fw-bold text-light text-decoration-underline">Information and Media Technology</h5>
               <p class="mb-0 text-light">NTI Vetenskapsgymmnasiet Gävle</p>
               <p class="text-muted">2022 - 2025</p>
             </div>
@@ -97,7 +97,7 @@
 
           <div class="card shadow-sm mb-3 edu-card">
             <div class="card-body">
-              <h5 class="fw-bold text-light">Basic Education</h5>
+              <h5 class="fw-bold text-light text-decoration-underline">Basic Education</h5>
               <p class="mb-0 text-light">Stigslund Skola</p>
               <p class="text-muted">2012 - 2022</p>
             </div>
@@ -106,6 +106,16 @@
       </div>
     </section>
   </main>
+
+  <footer class="text-center py-4 mt-5" style="background-color: #0b0b17; color: #ccc;">
+    <div class="container">
+      <p class="mb-2">© 2025 Sebastian Broberg. All Rights Reserved.</p>
+      <div class="d-flex justify-content-center gap-3">
+        <a href="https://github.com/SebbeBengtson" class="accent-link">GitHub</a>
+        <a href="contact.html" class="accent-link">Contact</a>
+      </div>
+    </div>
+  </footer>
 
   <script>
     document.addEventListener('DOMContentLoaded', function () {
