--- a/index.html
+++ b/index.html
@@ -24,53 +24,62 @@
   <main>
     <section class="intro text-center">
       <h1 class="display-6 fw-bold text-light">Hi, I'm <span class="accent">Sebastian</span></h1>
-      <p class="lead text-light mb-5">A Web Developer & Designer creating clean, modern digital experiences.</p>
+      <p class="lead text-light mb-5">I'm a junior developer at NTI Vetenskapsgymmnasiet Gävle</p>
     </section>
 
     <section class="cards-section container">
       <div class="row g-4 justify-content-center">
 
-        <div class="col-sm-10 col-md-5">
+        <a style="text-decoration: none;" href="projects.html" class="col-sm-10 col-md-5">
           <div class="card shadow-sm">
             <div class="card-body">
-              <h5 class="card-title fw-bold">About Me</h5>
-              <p class="card-text">Short professional bio. Talk about your background, passion, and focus areas.</p>
+              <h3 style="text-align: center;" class="card-title fw-bold">About Me</h3>
             </div>
           </div>
-        </div>
+        </a>
 
-        <div class="col-sm-10 col-md-5">
-          <div class="card shadow-sm">
+        <a style="text-decoration: none;" href="projects.html" class="col-sm-10 col-md-5">
+          <div class="card shadow-sm" >
             <div class="card-body">
-              <h5 class="card-title fw-bold">Contact</h5>
-              <p class="card-text">Invite collaboration or job opportunities. Add a contact form or email link.</p>
+              <h3 style="text-align: center;" class="card-title fw-bold">Contact</h3>
             </div>
           </div>
-        </div>
+        </a>
+        <a style="text-decoration: none;" href="projects.html" class="col-sm-10 col-md-5">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title fw-bold">Immersion</h5>
+              <p class="card-text">Immersion is a game that i created in Unity, coded in C#, it is a 2D platformer game with philosophical undertones.</p>
+              <img src="images/immersion.png" alt="Immersion screenshot" class="img-fluid rounded">
+            </div>
+          </div>
+        </a>
+        <a style="text-decoration: none;" href="projects.html" class="col-sm-10 col-md-5">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title fw-bold">Pandemonium</h5>
+              <p class="card-text">Pandemonium is a social media platform that I made, it's main focus is to induce impulsivenes and toxicity, hence the hell theme.</p>
+              <img src="images/pan2.png" alt="Immersion screenshot" class="img-fluid rounded">
+            </div>
+          </div>
+        </a>
 
-        <div class="col-sm-10 col-md-5">
-          <div class="card shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title fw-bold">Project 1</h5>
-              <p class="card-text">Description of your project or service. Highlight skills or technologies used.</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-10 col-md-5">
-          <div class="card shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title fw-bold">Project 2</h5>
-              <p class="card-text">Another sample of your work. You can add images or links here too.</p>
-            </div>
-          </div>
-        </div>
 
        
 
       </div>
     </section>
   </main>
+
+  <footer class="text-center py-4 mt-5" style="background-color: #0b0b17; color: #ccc;">
+    <div class="container">
+      <p class="mb-2">© 2025 Sebastian Broberg. All Rights Reserved.</p>
+      <div class="d-flex justify-content-center gap-3">
+        <a href="https://github.com/SebbeBengtson" class="accent-link">GitHub</a>
+        <a href="contact.html" class="accent-link">Contact</a>
+      </div>
+    </div>
+  </footer>
 
   <script>
     document.addEventListener('DOMContentLoaded', function () {
