--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-  
+
   <nav>
     <h2 class="logo text-center py-3">Sebastian Broberg</h2>
     <ul id="navList">
@@ -24,8 +24,8 @@
 
   <main>
     <section class="intro text-center">
-      <h1 class="display-6 fw-bold text-light">Hi, I'm <span class="accent">Sebastian</span></h1>
-      <p class="lead text-light mb-5">A Web Developer & Designer creating clean, modern digital experiences.</p>
+      <h1 class="display-6 fw-bold text-light"><span class="accent">Projects</span></h1>
+      <p class="lead text-light mb-5">Here are some projects that I have created.</p>
     </section>
 
     <section class="cards-section container">
@@ -33,8 +33,9 @@
         <div class="col-sm-10 col-md-5">
           <div class="card shadow-sm">
             <div class="card-body">
-              <h5 class="card-title fw-bold">Project 1</h5>
-              <p class="card-text">Description of your project or service. Highlight skills or technologies used.</p>
+              <h5 class="card-title fw-bold">Dungeon Crawler</h5>
+              <p class="card-text">The Dungeon Crawler projet is a console program that I made, you can move through a world and interact with it using text inputs.</p>
+              <img src="images/dungon.png" alt="Immersion screenshot" class="img-fluid rounded">
             </div>
           </div>
         </div>
@@ -42,8 +43,9 @@
         <div class="col-sm-10 col-md-5">
           <div class="card shadow-sm">
             <div class="card-body">
-              <h5 class="card-title fw-bold">Project 2</h5>
-              <p class="card-text">Another sample of your work. You can add images or links here too.</p>
+              <h5 class="card-title fw-bold">Immersion</h5>
+              <p class="card-text">Immersion is a game that i created in Unity, coded in C#, it is a 2D platformer game with philosophical undertones.</p>
+              <img src="images/immersion.png" alt="Immersion screenshot" class="img-fluid rounded">
             </div>
           </div>
         </div>
@@ -51,17 +53,21 @@
         <div class="col-sm-10 col-md-5">
           <div class="card shadow-sm">
             <div class="card-body">
-              <h5 class="card-title fw-bold">Project 3</h5>
-              <p class="card-text">Description of your project or service. Highlight skills or technologies used.</p>
+              <h5 class="card-title fw-bold">Pandemonium</h5>
+              <p class="card-text">Pandemonium is a social media platform that I made, it's main focus is to induce impulsivenes and toxicity, hence the hell theme.</p>
+              <img src="images/pan.png" alt="Immersion screenshot" class="img-fluid rounded">
             </div>
           </div>
         </div>
 
+      
+
         <div class="col-sm-10 col-md-5">
           <div class="card shadow-sm">
             <div class="card-body">
-              <h5 class="card-title fw-bold">Project 4</h5>
-              <p class="card-text">Another sample of your work. You can add images or links here too.</p>
+              <h5 class="card-title fw-bold">Fractal Project</h5>
+              <p class="card-text">A program that I made that generates a fractal patern with different adjustable settings.</p>
+              <img src="images/mandel.png" alt="Immersion screenshot" class="img-fluid rounded">
             </div>
           </div>
         </div>
@@ -70,6 +76,16 @@
       </div>
     </section>
   </main>
+
+  <footer class="text-center py-4 mt-5" style="background-color: #0b0b17; color: #ccc;">
+    <div class="container">
+      <p class="mb-2">© 2025 Sebastian Broberg. All Rights Reserved.</p>
+      <div class="d-flex justify-content-center gap-3">
+        <a href="https://github.com/SebbeBengtson" class="accent-link">GitHub</a>
+        <a href="contact.html" class="accent-link">Contact</a>
+      </div>
+    </div>
+  </footer>
 
   <script>
     document.addEventListener('DOMContentLoaded', function () {
