--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <button class="menu-button" aria-label="Menu">&#9776;</button>
 
   <main>
-    <section class="intro text-center">
+    <section class="intro text-center" style="margin: 5.5rem;">
       <h1 class="display-6 fw-bold text-light">Hi, I'm <span class="accent">Sebastian</span></h1>
-      <p class="lead text-light mb-5">I'm a junior developer at NTI Vetenskapsgymmnasiet Gävle</p>
+      <p class="lead text-light">I'm a junior developer at NTI Vetenskapsgymmnasiet Gävle</p>
     </section>
 
     <section class="cards-section container">
@@ -32,7 +32,7 @@
 
         <a style="text-decoration: none;" href="projects.html" class="col-sm-10 col-md-5">
           <div class="card shadow-sm">
-            <div class="card-body">
+            <div class="card-body py-5">
               <h3 style="text-align: center;" class="card-title fw-bold">About Me</h3>
             </div>
           </div>
@@ -40,7 +40,7 @@
 
         <a style="text-decoration: none;" href="projects.html" class="col-sm-10 col-md-5">
           <div class="card shadow-sm" >
-            <div class="card-body">
+            <div class="card-body py-5">
               <h3 style="text-align: center;" class="card-title fw-bold">Contact</h3>
             </div>
           </div>
@@ -71,9 +71,9 @@
     </section>
   </main>
 
-  <footer class="text-center py-4 mt-5" style="background-color: #0b0b17; color: #ccc;">
+  <footer id="footerr" class="text-center py-4" style="background-color: #0b0b17; color: #ccc;">
     <div class="container">
-      <p class="mb-2">© 2025 Sebastian Broberg. All Rights Reserved.</p>
+      <p class="mb-2">Sebastian Broberg 2025</p>
       <div class="d-flex justify-content-center gap-3">
         <a href="https://github.com/SebbeBengtson" class="accent-link">GitHub</a>
         <a href="contact.html" class="accent-link">Contact</a>
