--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
 
   <footer class="text-center py-4 mt-5" style="background-color: #0b0b17; color: #ccc;">
     <div class="container">
-      <p class="mb-2">© 2025 Sebastian Broberg. All Rights Reserved.</p>
+      <p class="mb-2">Sebastian Broberg 2025</p>
       <div class="d-flex justify-content-center gap-3">
         <a href="https://github.com/SebbeBengtson" class="accent-link">GitHub</a>
         <a href="contact.html" class="accent-link">Contact</a>
