--- a/about.html
+++ b/about.html
@@ -35,8 +35,9 @@
           <div class="card shadow-sm info-card">
             <div class="card-body">
               <h4 class="card-title accent mb-3"><img src="" alt="">Sebastian Broberg</h4>
-              <p class="text-light mb-2"><strong>Web Developer</strong></p>
-              <p class="text-light">Location: Gävle, Sweden</p>
+              <p class="text-light mb-2">Age: Born 3-19-2006. </p>
+                <p>At NTI Gävle, I have taken several programming courses that are a part of my technical education program, were I have learned some of the programming languages listed bellow as well as the general coding mindset.</p>
+                <p class="text-light">Location: Gävle, Sweden</p>
               <p class="mt-3 text-light"></p>
             </div>
           </div>
@@ -109,7 +110,7 @@
 
   <footer class="text-center py-4 mt-5" style="background-color: #0b0b17; color: #ccc;">
     <div class="container">
-      <p class="mb-2">© 2025 Sebastian Broberg. All Rights Reserved.</p>
+      <p class="mb-2">Sebastian Broberg 2025</p>
       <div class="d-flex justify-content-center gap-3">
         <a href="https://github.com/SebbeBengtson" class="accent-link">GitHub</a>
         <a href="contact.html" class="accent-link">Contact</a>
