--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <button class="menu-button" aria-label="Menu">&#9776;</button>
 
   <main>
-    <section class="intro text-center" style="margin: 5.5rem;">
+    <section class="intro text-center" id="indexText">
       <h1 class="display-6 fw-bold text-light">Hi, I'm <span class="accent">Sebastian</span></h1>
       <p class="lead text-light">I'm a junior developer at NTI Vetenskapsgymmnasiet Gävle</p>
     </section>
@@ -30,7 +30,7 @@
     <section class="cards-section container">
       <div class="row g-4 justify-content-center">
 
-        <a style="text-decoration: none;" href="projects.html" class="col-sm-10 col-md-5">
+        <a style="text-decoration: none;" href="projects.html" class="col-sm-10 col-md-4">
           <div class="card shadow-sm">
             <div class="card-body py-5">
               <h3 style="text-align: center;" class="card-title fw-bold">About Me</h3>
@@ -38,7 +38,7 @@
           </div>
         </a>
 
-        <a style="text-decoration: none;" href="projects.html" class="col-sm-10 col-md-5">
+        <a style="text-decoration: none;" href="projects.html" class="col-sm-10 col-md-4">
           <div class="card shadow-sm" >
             <div class="card-body py-5">
               <h3 style="text-align: center;" class="card-title fw-bold">Contact</h3>
