--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name | Portfolio</title>
+  <title>Sebastian Broberg | Projects</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="css.css" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
@@ -34,7 +34,7 @@
           <div class="card shadow-sm">
             <div class="card-body">
               <h5 class="card-title fw-bold">Dungeon Crawler</h5>
-              <p class="card-text">The Dungeon Crawler projet is a console program that I made, you can move through a world and interact with it using text inputs.</p>
+              <p class="card-text">The Dungeon Crawler projet is a console program that I made, you can move through a world and interact with it using text inputs, a lot was done through object oriented programming. This project was made using C# and Visual Studio 2022.</p>
               <img src="images/dungon.png" alt="Immersion screenshot" class="img-fluid rounded">
             </div>
           </div>
@@ -44,7 +44,7 @@
           <div class="card shadow-sm">
             <div class="card-body">
               <h5 class="card-title fw-bold">Immersion</h5>
-              <p class="card-text">Immersion is a game that i created in Unity, coded in C#, it is a 2D platformer game with philosophical undertones.</p>
+              <p class="card-text">Immersion is a game that i created in Unity, coded in C#, it is a 2D platformer game with philosophical undertones. This project was coded with C#, assembled through Visual Studio 2022 and the visuals were made using Unity.</p>
               <img src="images/immersion.png" alt="Immersion screenshot" class="img-fluid rounded">
             </div>
           </div>
@@ -54,7 +54,7 @@
           <div class="card shadow-sm">
             <div class="card-body">
               <h5 class="card-title fw-bold">Pandemonium</h5>
-              <p class="card-text">Pandemonium is a social media platform that I made, it's main focus is to induce impulsivenes and toxicity, hence the hell theme.</p>
+              <p class="card-text">Pandemonium is a social media platform, it's main aim is to induce impulsivenes and toxic behavior, users can write responses to random posts that appear by spinning a wheel. This Website was made using HTML, CSS, JavaScript and PHP for coding, Laragon and HeidiSQL for the database and loading the site. </p>
               <img src="images/pan.png" alt="Immersion screenshot" class="img-fluid rounded">
             </div>
           </div>
@@ -66,7 +66,7 @@
           <div class="card shadow-sm">
             <div class="card-body">
               <h5 class="card-title fw-bold">Fractal Project</h5>
-              <p class="card-text">A program that I made that generates a fractal patern with different adjustable settings.</p>
+              <p class="card-text">A program that I made that generates a fractal and Julia patern with different adjustable settings, achieved through painting the fractal or Julia equations out in the box. This program was made using Windows Forms and coded with C#.</p>
               <img src="images/mandel.png" alt="Immersion screenshot" class="img-fluid rounded">
             </div>
           </div>
