final, final, final.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="card shadow-sm">
             <div class="card-body">
               <h5 class="card-title fw-bold">Immersion</h5>
-              <p class="card-text">Immersion is a game that i created in Unity, coded in C#, it is a 2D platformer game with philosophical undertones.</p>
+              <p class="card-text">Immersion is a game that i created in Unity, it is a 2D platformer game with philosophical undertones. A journey of working, failing, fun, and falling into the void.</p>
               <img src="images/immersion.png" alt="Immersion screenshot" class="img-fluid rounded">
             </div>
           </div>
@@ -75,7 +75,6 @@
     <div class="container">
       <p class="mb-2">Sebastian Broberg 2025</p>
       <div class="d-flex justify-content-center gap-3">
-        <a href="https://github.com/SebbeBengtson" class="accent-link">GitHub</a>
         <a href="contact.html" class="accent-link">Contact</a>
       </div>
     </div>
