--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
   <button class="menu-button" aria-label="Menu">&#9776;</button>
 
   <main>
-    <section class="intro text-center mb-5">
+    <section class="intro text-center mb-5" id="contactText">
       <h1 class="display-6 fw-bold text-light">Get in Touch</h1>
       <p class="lead text-light">Contact me through the contact info or through end a message to me through the form.</p>
     </section>
@@ -56,9 +56,11 @@
               <p class="text-light mb-2"><strong>Phone:</strong> 0761717022</p>
               <p class="text-light mb-2"><strong>Location:</strong> Gävle, Sweden</p>
               <hr class="text-secondary">
+              <p class="text-light mb-2"><strong>Discord:</strong> RoofWithAFloor</p>
               <p class="text-light mb-0">
-                 <strong>Links:</strong> 
-                <a href="https://github.com/SebbeBengtson" class="accent-link">GitHub</a> 
+                 <strong>GitHub:</strong> 
+                <a href="https://github.com/sebastianbroberg" class="accent-link">github.com/sebastianbroberg</a> 
+                
               </p>
             </div>
           </div>
@@ -71,8 +73,6 @@
     <div class="container">
       <p class="mb-2">Sebastian Broberg 2025</p>
       <div class="d-flex justify-content-center gap-3">
-        <a href="https://github.com/SebbeBengtson" class="accent-link">GitHub</a>
-        <a href="contact.html" class="accent-link">Contact</a>
       </div>
     </div>
   </footer>
